[tool.poetry]
name = "sbl-filing-api"
version = "0.1.0"
description = "SBL Filing API"
authors = ["lchen-2101 <73617864+lchen-2101@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sbl_filing_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-keycloak = "^3.7.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
regtech-data-validator = {git = "https://github.com/cfpb/regtech-data-validator.git", branch = "main"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"
pytest-alembic = "^0.10.7"
ruff = "^0.1.6"
black = "^23.11.0"
pytest-asyncio = "^0.23.2"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term",
  "--cov=src",
  "-vv",
  "--strict-markers",
  "-rfE",
]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
skip_empty = true