[tool.poetry]
name = "sbl-filing-api"
version = "0.1.0"
description = "SBL Filing API"
authors = ["lchen-2101 <73617864+lchen-2101@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "sbl_filing_api", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4"
fastapi = "^0.109.1"
uvicorn = "^0.24.0.post1"
python-keycloak = "^3.7.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
regtech-api-commons = {git = "https://github.com/cfpb/regtech-api-commons.git"}
regtech-data-validator = {git = "https://github.com/cfpb/regtech-data-validator.git"}
regtech-regex = {git = "https://github.com/cfpb/regtech-regex.git"}
python-multipart = "^0.0.7"
boto3 = "^1.33.12"
alembic = "^1.12.0"
async-lru = "^2.0.4"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"
pytest-alembic = "^0.10.7"
pytest-asyncio = "^0.23.2"
aiosqlite = "^0.19.0"


[tool.poetry.group.linters.dependencies]
ruff = "0.1.6"
black = "23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term",
  "--cov=src",
  "-vv",
  "--strict-markers",
  "-rfE",
]
env = [
  "DB_SCHEMA=main",
  "DB_USER=user",
  "DB_PWD=user",
  "DB_HOST=localhost:5432",
  "DB_NAME=filing",
  "KC_URL=http://localhost",
  "KC_REALM=",
  "KC_ADMIN_CLIENT_ID=",
  "KC_ADMIN_CLIENT_SECRET=",
  "KC_REALM_URL=http://localhost",
  "AUTH_URL=http://localhost",
  "TOKEN_URL=http://localhost",
  "CERTS_URL=http://localhost",
  "AUTH_CLIENT=",
  "FS_UPLOAD_CONFIG__PROTOCOL=file",
  "FS_UPLOAD_CONFIG__ROOT=../upload",
  "FS_UPLOAD_CONFIG__MKDIR=true",
  "FS_DOWNLOAD_CONFIG__PROTOCOL=file"
]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
skip_empty = true